tests/core/invalid/non-printable-closure/input.core
(core 0
  (types)
  (defs
    (def example::identity (fn Int Int)
      (lam (bind value Int) (local value)))))
